# manomat

./: Makefile  README.md  pyproject.toml  requirements.txt
src/: main.py  trainning_tensorflow.py
