[tool.poetry]
name = "ManoMat"
version = "0.0.0"
description = "ManoMat es un juego de manos para hacer cálculos matemáticos sencillos"
authors = ["Jonathan Rodríguez Alejos <jonathan.rodriguez.alejos@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]
include = ["pre-commit-config.yaml"]

[tool.poetry.dependencies]
python = "^3.12.7"
flake8 = "^6.0.0"
isort = "^5.12.0"
pre-commit = "^3.1.1"
coverage = "^7.2.2"
tensorflow = "^2.18.0"
mediapipe = "^0.10.18"
opencv-python = "^4.10.0.84"
numpy = "1.26.4"
pygame = "^2.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
extend-exclude="# noqa"

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 79
